# pandoc-wrappers

./: .gitignore  AGENTS.md  README  README.md  bd.py  bdh.py  doc2txt.py  dtt.py  markdown-wrapper.py  md.py  md2bib.py  mkd2bib.py  pyb2pel.py  pyproject.toml  pyroject.toml  wiki-update.py
src/pandoc_wrapper/: chapters_merge.py  doc2txt.py  markdown_wrapper.py  md2bib.py  wiki_update.py
src/pandoc_wrappers/: doc2txt.py  markdown_wrapper.py  md2bib.py  wiki_update.py
